# the-cat-assignment

./: .gitignore  .yamllint  README.md  pyproject.toml  samconfig.toml  setup.cfg  template.yaml
.github/workflows/: deploy_to_aws.yaml  release_creation.yaml  static_analysis.yaml  unit_tests.yaml
src/cat_in_the_movies/: enrich_top_ten_movies.py  exceptions.py  get_top_ten_movies.py  logger.py  utils.py
tests/: conftest.py  test_enrich_top_ten_movies.py  test_get_top_ten_movies.py  test_utils.py
tests/assets/: 250_movies.json  list_of_enriched_movies.json  omdb_movie_data.json  sqs_incomming_payload.json  top_ten_movies.json
