[metadata]
name = cat_in_the_movies
version = 0.1.0
author = aka-raccoon
author_email = cat at raccoon
home_page = https://github.com/aka-raccoon/the-cat-assignment
description =  Serverless functions and AWS CloudFormation template to create AWS Serverless Application (SAM).
long_description = file: README.md
long_description_content_type = text/markdown
platform = ['linux']
keywords = ['aws']
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
python_requires = >= 3.8
install_requires =
    requests==2.27.1
    boto3==1.23.2
[options.extras_require]
test =
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-mock==3.7.0
    requests-mock==1.9.3
    moto==3.1.9
dev =
    bandit==1.7.4
    black==22.3.0
    commitizen==2.27.0
    isort==5.10.1
    mypy==0.950
    types-requests==2.27.26
    pylint==2.13.9
    toml==0.10.2
    yamllint==1.26.3


[options.packages.find]
where=src
